--- a/public/chat.html
+++ b/public/chat.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
-  <title>ChatCord App</title>
+  <title>Vibrr Chat App</title>
 </head>
 <body>
   <div class="chat-container">
     <header class="chat-header">
       <h1><i class="fas fa-comments"></i> Vibrr</h1>
-      <span href="index.html" class="btn"><a class="fas fa-sign-out-alt"></a> Leave Space</span>
+      <a class="btn btn-leave" href="index.html"><i class="fas fa-sign-out-alt"></i> Leave Space </a>
     </header>
     <main class="chat-main">
       <div class="chat-sidebar">
@@ -31,7 +31,7 @@
           required
           autocomplete="off"
         />
-        <button class="btn"><i class="fas fa-paper-plane"></i> Send</button>
+        <button class="btn btn-send"><i class="fas fa-paper-plane"></i> Send</button>
       </form>
     </div>
   </div>
