--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,12 @@
 					<div class="form-control">
 						<label for="room">Available Spaces:</label>
 						<select name="room" id="room">
-							<option value="JavaScript">Testing</option>
-							<option value="Python">School is boring</option>
-							<option value="PHP">Sup</option>
-							<option value="C#">RIP Math</option>
-							<option value="Ruby">Games</option>
-							<option value="Java">Yoooooo</option>
+							<option value="Testing">Testing</option>
+							<option value="School is boring">School is boring</option>
+							<option value="Sup">Sup</option>
+							<option value="RIP Math">RIP Math</option>
+							<option value="Games">Games</option>
+							<option value="Yoooooo">Yoooooo</option>
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
