--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>Vibrr Chat App</title>
+		<title>Krushkord Chat App</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-comments"></i> Vibrr</h1>
+				<h1><i class="fas fa-comments"></i> Krushkord</h1>
 				<h3>Made by Krushil Amrutiya</h3><br>
 				<h3>Still Under development <i class="fas fa-hammer"></i></h3>
 			</header>
@@ -36,11 +36,11 @@
 						<label for="room">Available Spaces:</label>
 						<select name="room" id="room">
 							<option value="Testing">Testing</option>
-							<option value="School is boring">School is boring</option>
+							<!--<option value="School is boring">School is boring</option>
 							<option value="Sup">Sup</option>
 							<option value="RIP Math">RIP Math</option>
 							<option value="Games">Games</option>
-							<option value="Yoooooo">Yoooooo</option>
+							<option value="Yoooooo">Yoooooo</option>-->
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
