--- a/public/chat.html
+++ b/public/chat.html
@@ -11,6 +11,7 @@
   <div class="chat-container">
     <header class="chat-header">
       <h1><i class="fas fa-comments"></i> Krushkord</h1>
+      <a href="https://krushkord-vc.herokuapp.com/?room=testing_3713053077" class="btn btn-leave"><i class="fas fa-video"></i>&nbsp Join Call </a>
       <a class="btn btn-leave" href="index.html"><i class="fas fa-sign-out-alt"></i> Leave Space </a>
     </header>
     <main class="chat-main">
